Fix navbar overlap, add delete employee, add debug logging to add-employee flow

--- a/total_frontend/css/style.css
+++ b/total_frontend/css/style.css
@@ -31,7 +31,7 @@ body{
 
 .main-content{
     margin-left:240px;
-    margin-top:30px;
+    margin-top:90px;
     padding:20px;
 }
 
